feat: phase 4a+4b - react frontend with all pages and API layer
  - Tailwind CSS + Vite plugin, React Router, TanStack Query
  - Typed API client matching backend endpoints
  - Home page: top rated movies grid
  - Movie detail: overview, cast, crew, genres, budget/revenue stats
  - Browse page: genre chips, decade filter, sort toggle
  - Person page: filmography grid
  - MovieCard with colored placeholders
  - Vite proxy forwarding /api to backend
  - Restructure phases: move TMDB posters to 4c, trim to 11 phases